Fix for "jump" in Firefox when modal triggers, per https://github.com/twbs/bootstrap/issues/9855#issuecomment-36639797

--- a/ui/less/styles.less
+++ b/ui/less/styles.less
@@ -129,6 +129,13 @@ a.btn:link, a.btn:hover, a.btn:visited {
 
 /* Media queries */
 
+//Modal shift fix for Mozilla
+@media screen and (min--moz-device-pixel-ratio:0) { 
+    .modal-open {
+    overflow: auto;
+    }
+}
+
 @media 
 only screen and (-webkit-min-device-pixel-ratio: 2), 
 only screen and (min-resolution: 192dppx) { 
